dark mode content background fix

--- a/src/styles/vars.css
+++ b/src/styles/vars.css
@@ -56,7 +56,7 @@
     /* Dark mode branding and theming. */
     --body-background: black;
     --border-color: var(--gray3);
-    --content-background: var(--gray5);
+    --content-background: var(--gray6);
     --brand-color: #ed4d62;
     --header-background: rgba(0, 0, 0, .8);    
     --text-color: rgb(229, 229, 234);  /* Gray5 light. */
